[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Pause/Pause.gd" type="Script" id=1]
[ext_resource path="res://du_assets/textures/tiles/cave_wall_3.png" type="Texture" id=2]
[ext_resource path="res://du_assets/textures/pause_options/resume.png" type="Texture" id=3]
[ext_resource path="res://du_assets/textures/pause_options/fullscreen.png" type="Texture" id=4]
[ext_resource path="res://du_assets/textures/pause_options/save_game.png" type="Texture" id=5]
[ext_resource path="res://du_assets/textures/pause_options/load_game.png" type="Texture" id=6]
[ext_resource path="res://du_assets/textures/pause_options/options.png" type="Texture" id=7]
[ext_resource path="res://du_assets/textures/pause_options/main_menu.png" type="Texture" id=8]
[ext_resource path="res://src/Save/SaveGame.tscn" type="PackedScene" id=9]
[ext_resource path="res://du_assets/textures/pause_options/resume_pressed.png" type="Texture" id=10]
[ext_resource path="res://du_assets/textures/pause_options/load_game_pressed.png" type="Texture" id=11]
[ext_resource path="res://du_assets/textures/pause_options/fullscreen_pressed.png" type="Texture" id=12]
[ext_resource path="res://du_assets/textures/pause_options/options_pressed.png" type="Texture" id=13]
[ext_resource path="res://du_assets/textures/pause_options/main_menu_pressed.png" type="Texture" id=14]
[ext_resource path="res://du_assets/textures/pause_options/save_game_pressed.png" type="Texture" id=15]

[node name="PauseLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PauseBackground" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.455
margin_top = -517.221
margin_right = 886.545
margin_bottom = -139.221
rect_scale = Vector2( 0.452946, 0.493086 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 10 )

[node name="Fullscreen" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = 305.135
margin_right = 970.0
margin_bottom = 685.135
rect_scale = Vector2( 0.303912, 0.336708 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 12 )

[node name="SaveGame" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.057
margin_top = -309.68
margin_right = 974.943
margin_bottom = 68.3198
rect_scale = Vector2( 0.294543, 0.306314 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -221.211
margin_top = -162.459
margin_right = 972.789
margin_bottom = 219.541
rect_scale = Vector2( 0.292318, 0.311602 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.692
margin_top = -4.85699
margin_right = 969.31
margin_bottom = 370.143
rect_scale = Vector2( 0.298415, 0.318607 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 13 )

[node name="MainMenu" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.449
margin_top = 152.118
margin_right = 966.55
margin_bottom = 530.12
rect_scale = Vector2( 0.30093, 0.316096 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" parent="." instance=ExtResource( 9 )]
[connection signal="pressed" from="Resume" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="SaveGame" to="Node2D" method="_on_SaveGame_pressed"]
[connection signal="pressed" from="LoadGame" to="Node2D" method="_on_LoadGame_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
